# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties
.github/: sonarcloud.yml
.github/workflows/: build.yml  pyci.yml  sonar.yml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: test_labels.json  test_statuses.json  test_tasks.json  test_users.json
task_manager/labels/: admin.py  forms.py  models.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_name.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_options_alter_status_created_at_and_more.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/templates/: base.html  index.html  layout.html  login_form.html
task_manager/templates/base/: layout.html
task_manager/templates/includes/: base_form.html  footer.html  form_field.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  form.html  index.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  form.html  index.html  list.html  update.html
task_manager/templates/tasks/: delete.html  detail.html  form.html  index.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/templates/users/: delete.html  form.html  index.html  registration_form.html
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_first_name_alter_user_last_name.py  0004_alter_user_options_alter_user_first_name_and_more.py
task_manager/users/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: list.html  login.html  update.html
users/templates/users/: create.html  delete.html
