[project]
authors = [
    {name = "Arina Khokhlova", email = "khokhlova.arina.v@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=4.2.21",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "ruff>=0.11.11",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["task_manager"]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
