[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Arina Khokhlova", email = "khokhlova.arina.v@gmail.com"},
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Education",
]
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.hatch.envs.dev]
dependencies = [
    "coverage>=7.8.0",
    "ruff>=0.11.11",
    "pytest>=8.0.0",
    "pytest-django>=5.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ["tests/*.py", "test_*.py", "*_test.py"]

[tool.ruff]
line-length = 120
target-version = "py313"
select = ["E", "F", "W", "I", "UP", "DJ"]
extend-select = ["RET", "SIM", "PTH"]